# droidracefirmware

./: .gitignore  CMakeLists.txt  STM32F429xE.cmake  test.py
Core/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
Examples/ex16_fr_queue/: FreeRTOSConfig.h  Makefile  main.c  platform
Examples/ex17_fr_sockets/: FreeRTOSConfig.h  Makefile  debugger_printf.c  main.c  main.h  netconfig.h
Examples/ex17_fr_sockets/nbproject/: configurations.xml  project.xml
Examples/ex17_fr_sockets/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml
Projects/droidrace2017/: .cproject  .project  Makefile  control_hal.c  control_hal.h  digiscope_cli.c  digiscope_cli.h  digiscope_net.c  digiscope_net.h  droid_cli.c  droid_cli.h  main.c  main.h  netconfig.h  networking.c  networking.h
Projects/droidrace2017/Core/FreeRTOS/Source/include/: task.h
Projects/droidrace2017/Core/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_eth.c
Projects/droidrace2017/nbproject/: configurations.xml  project.xml
Projects/engg4810/: .depend  Core  FreeRTOSConfig.h  digiscope_adc.c  digiscope_adc.h  digiscope_cli.c  digiscope_cli.h  digiscope_lcd.c  digiscope_lcd.h  digiscope_mux.c  digiscope_mux.h  digiscope_net.c  digiscope_net.h  digiscope_offset.c  digiscope_offset.h  digiscope_settings.c  digiscope_settings.h  digiscope_signalgen.c  digiscope_signalgen.h  digiscope_vertical.c  digiscope_vertical.h  digiscope_voltagedetect.c  digiscope_voltagedetect.h  lowlevel_dac.c  lowlevel_dac.h  lowlevel_digitalpot.c  lowlevel_digitalpot.h  lowlevel_pga.c  lowlevel_pga.h  lowlevel_spi1_bus.c  lowlevel_spi1_bus.h  main.c  main.h  nucleof429zi  signalgen.h
Projects/engg4810/nbproject/private/: configurations.xml
Projects/lwipwebserver/: Makefile
Projects/lwipwebserver/nbproject/: configurations.xml  project.xml
Projects/lwipwebserver/nbproject/private/: configurations.xml
Projects/lwipwebserver/src/: fsdata.c  main.c
(+1 files in other folders)
